FA button mobile height fix

--- a/src/projects.scss
+++ b/src/projects.scss
@@ -991,6 +991,7 @@ a.member{
 	.button{
 		&.fa{
 			height:45px;
+			margin-top: -70px;
 		}
 	}
 }
